--- a/index.html
+++ b/index.html
@@ -508,6 +508,21 @@
     background-color: #f9f9f9;
 }
 
+@keyframes highlightLeaderboard {
+    0% {
+        transform: scale(1);
+        box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+    }
+    50% {
+        transform: scale(1.02);
+        box-shadow: 0 6px 25px rgba(0,0,0,0.15);
+    }
+    100% {
+        transform: scale(1);
+        box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+    }
+}
+
 </style>
 </head>
 
@@ -1009,8 +1024,20 @@ async function saveScore(score, total) {
         };
 
         await database.ref(`leaderboards/${gameId}/scores`).push(scoreData);
-        updateLeaderboard(gameId);
+        await updateLeaderboard(gameId);
         closeModal();
+
+        // Add smooth scrolling to leaderboard
+        const leaderboardElement = document.querySelector('.leaderboard-container');
+        if (leaderboardElement) {
+            leaderboardElement.scrollIntoView({ 
+                behavior: 'smooth', 
+                block: 'center'
+            });
+            
+            // Optional: Add highlight effect
+            leaderboardElement.style.animation = 'highlightLeaderboard 2s ease';
+        }
     } catch (error) {
         console.error('Error saving score:', error);
         alert('Error saving score. Please try again.');
